# sam-mask-gui

./: .gitignore  .gitmodules  README.md  config.json  pyproject.toml
src/: __init__.py  logging_config.py  main.py
src/gui/: __init__.py  main_window.py
src/gui/controllers/: __init__.py  batch_session_controller.py  image_list_controller.py  mask_controller.py  propagation_controller.py  settings_controller.py  undo_controller.py
src/gui/dialogs/: __init__.py  settings.py  shortcuts_dialog.py
src/gui/panels/: __init__.py  center_panel.py  left_panel.py  right_panel.py
src/gui/widgets/: __init__.py  mask_selector.py
src/gui/widgets/image_viewer/: __init__.py  brush_engine.py  coordinate_mapper.py  renderer.py  widget.py
src/gui/workers/: __init__.py  model_loader.py  propagation_worker.py  thumbnail_loader.py
src/models/: __init__.py  image_state.py  keypoint.py  predictor_base.py  session_models.py
src/sam2/: __init__.py  config.py  predictor.py  video_predictor.py
src/sam3/: __init__.py  predictor.py
src/services/: __init__.py  config_service.py  image_service.py  mask_service.py
src/utils/: __init__.py  check_packages.py  decord_stub.py  triton_stub.py
tests/: conftest.py
tests/unit/: test_check_packages.py  test_config_service.py  test_image_service.py  test_models.py  test_stubs_missing_decord_triton.py
