[project]
name = "sam2-gui"
version = "0.1.0"
description = "GUI application for creating masks from images using SAM2 and SAM3"
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.6.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "Pillow>=10.0.0",
    # SAM3-related (needed when using SAM3 from vendor or external install)
    "einops>=0.8.0",
    "decord>=0.6.0",
    "pycocotools>=2.0.0",
    "psutil>=7.0.0",
    # SAM3 / some SAM3 libs break with setuptools 82+
    "setuptools>=71.0.0,<82.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "SIM102"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
exclude = [".venv", "vendor", "src/utils/check_packages.py"]
disable_error_code = ["no-any-return", "annotation-unchecked"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "torch"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "sam2"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "sam3"
follow_imports = "skip"
